--- a/Restaurant/styles.css
+++ b/Restaurant/styles.css
@@ -15,7 +15,7 @@ BODY{
     margin-bottom: 1vw;
 }
 .h1-links{
-    color:black;
+    color:rgb(213, 247, 17);
     font-weight: bolder;
     float:right;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -29,7 +29,7 @@ BODY{
     color:var(--text-color);
 }
 .top{
-    height:90vh;
+    height:100vh;
     width:100%;
     background-image:url("pexels-elevate-1267315.jpg");
     background-size: cover;
@@ -44,23 +44,57 @@ BODY{
 }
 @media screen and (max-width:600px) {
     .top{
-        height: 55vh;
+        height: 50vh;
     }
     body{
         margin-top: -4.9vw;
     }
     .h1-links{
+        padding-top: 3%;
         font-size: 3vw;
-        color: var(--text-color);
+        color: #FFA500;
     }
     .Logo{
-        margin-top: 10%;
         padding-left: 30%;
+        position: relative;
+        top: 10%;
     }
-
+    .content p{
+        font-size: 43vw;
+        width: 80%;
+    }
+    #manager{
+        width: 100%;
+        clip-path: circle(80%);
+    }
 }
 .Logo{
-    padding-top: 4%;
+    position: relative;
+    top: 14%;
     padding-left:35% ;
-    
+}
+.content{
+    text-align: center;
+}
+.content h1{
+    text-decoration:underline;
+}
+.content p{
+    font-size: 1.5vw;
+    color:rgb(213, 247, 17) ;
+    margin: 0 auto;
+    width: 60%;
+    font-style: italic;
+}
+.content-container{
+    padding-top: 4vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+#manager{
+    width: 70%;
+    height: auto;
+    clip-path: circle(40%);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    margin-left: 15vw;
 }
