--- a/Restaurant/styles.css
+++ b/Restaurant/styles.css
@@ -200,7 +200,7 @@ h2{
     margin-top: 4vh;
     margin-left: 12vw;
     width: 75%;
-    height: 70%;
+    height: fit-content;
     color: black;
     background-color: whitesmoke;
     display: grid;
@@ -225,4 +225,8 @@ h2{
 }
 .Form img{
     object-fit: cover;
+}
+.booking-container{
+    padding-top: 4vh;
+    padding-left: 4vw;
 }
