--- a/Restaurant/styles.css
+++ b/Restaurant/styles.css
@@ -1,7 +1,7 @@
 BODY{
     height:100%;
     width: 100vw;
-    margin-top: -1.9vw;
+    margin-top: -2.7vw;
     margin-left: -2px;
     overflow-x: hidden;
     background-color: var(--primary-color);
@@ -46,10 +46,10 @@ BODY{
 }
 @media screen and (max-width:600px) {
     .top{
-        height: 48vh;
+        height: 50vh;
     }
     body{
-        margin-top: -7.9vh;
+        margin-top: -10.5vh;
     }
     .h1-links{
         font-size: 3vw;
@@ -94,7 +94,7 @@ BODY{
     text-decoration:underline;
 }
 .content p{
-    font-family: fantasy;
+    font-family: "Montserrat", sans-serif;
     font-size: 1.5vw;
     color:#D4AF37;
     margin: 0 auto;
@@ -107,6 +107,7 @@ BODY{
     grid-template-columns: 1fr 1fr;
 }
 #manager{
+    filter: drop-shadow(0 4px 8px #D4AF37);
     margin-top: -17pt;
     width: 80%;
     height: auto;
@@ -263,4 +264,17 @@ h2{
 }
 .top-menu-1{
     opacity: 0;
+}
+.social-icons a {
+    color: white;
+    margin: 0 10px;
+    text-decoration: none;
+}
+.social-icons a:hover {
+    color: #D4AF37;
+}
+.social-icons img {
+    width: 24px;
+    height: 24px;
+    vertical-align: middle;
 }
